feat: add AI guessing
