# src/api/models/AiGuessInfo.ts
@@ -1,0 +1,123 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * tgs_v2
+ * Timeguessr Social API V2
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from "../runtime";
+import type { AiGuessInfoLocation } from "./AiGuessInfoLocation";
+import {
+  AiGuessInfoLocationFromJSON,
+  AiGuessInfoLocationFromJSONTyped,
+  AiGuessInfoLocationToJSON,
+  AiGuessInfoLocationToJSONTyped,
+} from "./AiGuessInfoLocation";
+
+/**
+ *
+ * @export
+ * @interface AiGuessInfo
+ */
+export interface AiGuessInfo {
+  /**
+   *
+   * @type {number}
+   * @memberof AiGuessInfo
+   */
+  year: number;
+  /**
+   *
+   * @type {AiGuessInfoLocation}
+   * @memberof AiGuessInfo
+   */
+  location: AiGuessInfoLocation;
+  /**
+   *
+   * @type {string}
+   * @memberof AiGuessInfo
+   */
+  locationName: string;
+  /**
+   *
+   * @type {string}
+   * @memberof AiGuessInfo
+   */
+  reasoning: string;
+  /**
+   *
+   * @type {string}
+   * @memberof AiGuessInfo
+   */
+  prompt: string;
+  /**
+   *
+   * @type {string}
+   * @memberof AiGuessInfo
+   */
+  model: string;
+}
+
+/**
+ * Check if a given object implements the AiGuessInfo interface.
+ */
+export function instanceOfAiGuessInfo(value: object): value is AiGuessInfo {
+  if (!("year" in value) || value["year"] === undefined) return false;
+  if (!("location" in value) || value["location"] === undefined) return false;
+  if (!("locationName" in value) || value["locationName"] === undefined)
+    return false;
+  if (!("reasoning" in value) || value["reasoning"] === undefined) return false;
+  if (!("prompt" in value) || value["prompt"] === undefined) return false;
+  if (!("model" in value) || value["model"] === undefined) return false;
+  return true;
+}
+
+export function AiGuessInfoFromJSON(json: any): AiGuessInfo {
+  return AiGuessInfoFromJSONTyped(json, false);
+}
+
+export function AiGuessInfoFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean,
+): AiGuessInfo {
+  if (json == null) {
+    return json;
+  }
+  return {
+    year: json["year"],
+    location: AiGuessInfoLocationFromJSON(json["location"]),
+    locationName: json["locationName"],
+    reasoning: json["reasoning"],
+    prompt: json["prompt"],
+    model: json["model"],
+  };
+}
+
+export function AiGuessInfoToJSON(json: any): AiGuessInfo {
+  return AiGuessInfoToJSONTyped(json, false);
+}
+
+export function AiGuessInfoToJSONTyped(
+  value?: AiGuessInfo | null,
+  ignoreDiscriminator: boolean = false,
+): any {
+  if (value == null) {
+    return value;
+  }
+
+  return {
+    year: value["year"],
+    location: AiGuessInfoLocationToJSON(value["location"]),
+    locationName: value["locationName"],
+    reasoning: value["reasoning"],
+    prompt: value["prompt"],
+    model: value["model"],
+  };
+}
