# src/api/models/AiGuessInfoLocation.ts
@@ -1,0 +1,80 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * tgs_v2
+ * Timeguessr Social API V2
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from "../runtime";
+/**
+ *
+ * @export
+ * @interface AiGuessInfoLocation
+ */
+export interface AiGuessInfoLocation {
+  /**
+   *
+   * @type {number}
+   * @memberof AiGuessInfoLocation
+   */
+  latitude: number;
+  /**
+   *
+   * @type {number}
+   * @memberof AiGuessInfoLocation
+   */
+  longitude: number;
+}
+
+/**
+ * Check if a given object implements the AiGuessInfoLocation interface.
+ */
+export function instanceOfAiGuessInfoLocation(
+  value: object,
+): value is AiGuessInfoLocation {
+  if (!("latitude" in value) || value["latitude"] === undefined) return false;
+  if (!("longitude" in value) || value["longitude"] === undefined) return false;
+  return true;
+}
+
+export function AiGuessInfoLocationFromJSON(json: any): AiGuessInfoLocation {
+  return AiGuessInfoLocationFromJSONTyped(json, false);
+}
+
+export function AiGuessInfoLocationFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean,
+): AiGuessInfoLocation {
+  if (json == null) {
+    return json;
+  }
+  return {
+    latitude: json["latitude"],
+    longitude: json["longitude"],
+  };
+}
+
+export function AiGuessInfoLocationToJSON(json: any): AiGuessInfoLocation {
+  return AiGuessInfoLocationToJSONTyped(json, false);
+}
+
+export function AiGuessInfoLocationToJSONTyped(
+  value?: AiGuessInfoLocation | null,
+  ignoreDiscriminator: boolean = false,
+): any {
+  if (value == null) {
+    return value;
+  }
+
+  return {
+    latitude: value["latitude"],
+    longitude: value["longitude"],
+  };
+}
