# src/api/models/SubmitImageRequest.ts
@@ -1,0 +1,101 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * tgs_v2
+ * Timeguessr Social API V2
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from "../runtime";
+/**
+ *
+ * @export
+ * @interface SubmitImageRequest
+ */
+export interface SubmitImageRequest {
+  /**
+   *
+   * @type {string}
+   * @memberof SubmitImageRequest
+   */
+  imageUrl: string;
+  /**
+   *
+   * @type {number}
+   * @memberof SubmitImageRequest
+   */
+  actualYear: number;
+  /**
+   *
+   * @type {number}
+   * @memberof SubmitImageRequest
+   */
+  actualLatitude: number;
+  /**
+   *
+   * @type {number}
+   * @memberof SubmitImageRequest
+   */
+  actualLongitude: number;
+}
+
+/**
+ * Check if a given object implements the SubmitImageRequest interface.
+ */
+export function instanceOfSubmitImageRequest(
+  value: object,
+): value is SubmitImageRequest {
+  if (!("imageUrl" in value) || value["imageUrl"] === undefined) return false;
+  if (!("actualYear" in value) || value["actualYear"] === undefined)
+    return false;
+  if (!("actualLatitude" in value) || value["actualLatitude"] === undefined)
+    return false;
+  if (!("actualLongitude" in value) || value["actualLongitude"] === undefined)
+    return false;
+  return true;
+}
+
+export function SubmitImageRequestFromJSON(json: any): SubmitImageRequest {
+  return SubmitImageRequestFromJSONTyped(json, false);
+}
+
+export function SubmitImageRequestFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean,
+): SubmitImageRequest {
+  if (json == null) {
+    return json;
+  }
+  return {
+    imageUrl: json["imageUrl"],
+    actualYear: json["actualYear"],
+    actualLatitude: json["actualLatitude"],
+    actualLongitude: json["actualLongitude"],
+  };
+}
+
+export function SubmitImageRequestToJSON(json: any): SubmitImageRequest {
+  return SubmitImageRequestToJSONTyped(json, false);
+}
+
+export function SubmitImageRequestToJSONTyped(
+  value?: SubmitImageRequest | null,
+  ignoreDiscriminator: boolean = false,
+): any {
+  if (value == null) {
+    return value;
+  }
+
+  return {
+    imageUrl: value["imageUrl"],
+    actualYear: value["actualYear"],
+    actualLatitude: value["actualLatitude"],
+    actualLongitude: value["actualLongitude"],
+  };
+}
